# Rick-and-Morty-Space-Adventures

./: Cargo.toml  README.md
assets/sprite/rick_n_morty/: astroid_one.collider  astroid_one_rotated.collider  astroid_zero.collider  astroid_zero_rotated.collider  spaceship.collider  star.collider
src/: astroid.rs  co_ordinate.rs  lib.rs  main.rs  star.rs
